# smol-sae

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build_and_release.yaml
examples/: load_vanilla_sae.py
smol_sae/: anthropic.py  base.py  gated.py  main.py  rainbow.py  vanilla.py
tests/: test_gated.py  test_vanilla.py
