[project]
name = "smol-sae"
version = "0.1.0"
description = "Minimal implementation of SAEs"
authors = [
    {name = "Daniel Tan", email = "dtch1997@users.noreply.github.com"},
    {name = "Daniel CH Tan", email = "dtch1997@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "ruff>=0.4.3",
    "pytest>=8.2.0",
    "pyright>=1.1.361",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pdm]
distribution = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.semantic_release]
version_variables = [
    "smol_sae/__init__.py:__version__",
    "pyproject.toml:version",
]
branch = "main"